# ipfs-proxy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.toml
config/: config.toml  test.toml
entity/: Cargo.toml
entity/src/: ipfs_object.rs  lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: actix_server.rs  app_context.rs  caching.rs  config.rs  ipfs_client.rs  lib.rs  telemetry.rs
static/: styles.css
templates/: directory_listing.html
