[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"
tracing-actix-web = "0.6"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full", "time"] }
reqwest = { version = "0.11", features = ["json", "trust-dns", "stream"] }
reqwest-tracing = "0"
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
sea-orm = { version = "^0", features = [
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
] }
anyhow = "1"
actix-web-opentelemetry = { git = "https://github.com/OutThereLabs/actix-web-opentelemetry", features = [
  "metrics",
  "metrics-prometheus",
] }
lazy_static = "1.4.0"
dashmap = "5"
chrono = "0.4"
cid = "0"
config = "0.13.2"
serde = "1"
futures = "0.3"
bytes = "1.2"
tempfile = "3"
opentelemetry = { version = "0.18", features = [
  "metrics",
  "trace",
  # "serialize",
  "rt-tokio",
] }
tracing-subscriber = "0.3"
infer = "0"
env_logger = "0.10"
async-recursion = "1"
tokio-util = "0"
actix-files = "0"
mime = "0"
mime_guess = "2"
urlencoding = "2"
